# chime

./: .gitignore  CODE_OF_CONDUCT.html  CONTRIBUTING.html  Dockerfile  GLOSSARY.html  MAINTAINERS.html  Pipfile  Procfile  index.html  pyproject.toml  requirements.txt  setup.py
contributing/: app-dev.html  data-analysis.html  operations-support.html
getting-started/: run-locally.html  try-online.html
operations/: byok8s.html  chime-live-cluster.html  habitat.html  heroku.html  manual-validation.html  prepare-new-chime-release.html  release-automation.html  release-process.html
operations/limited-kubeconfigs/: limited-kubeconfigs.html
