[tool.poetry]
name = "chime_streamlit"
version = "1.1.4"
description = "Streamlit App for Penn Medicine CHIME"
authors = ["Code for Philly", "Predictive Health @ Penn Medicine"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
streamlit = "^0.58.0"
pandas = "^1.0.3"
numpy = "^1.18.3"
altair = "^4.1.0"
gunicorn = "^20.0.4"
pyyaml = "^5.3.1"
python-i18n = "^0.3.7"
oauth2client = "^4.1.3"
gspread = "^3.5.0"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
